; ModuleID = '/home/carl/AnghaBench/git/extr_diffcore-order.c_order_objects.c'
source_filename = "/home/carl/AnghaBench/git/extr_diffcore-order.c_order_objects.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.obj_order = type { i32, i32, i32 }

@compare_objs_order = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @order_objects(i8* %0, i32 (i32)* %1, %struct.obj_order* %2, i32 %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i32 (i32)*, align 8
  %7 = alloca %struct.obj_order*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i32 (i32)* %1, i32 (i32)** %6, align 8
  store %struct.obj_order* %2, %struct.obj_order** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load i32, i32* %8, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %4
  br label %49

13:                                               ; preds = %4
  %14 = load i8*, i8** %5, align 8
  %15 = call i32 @prepare_order(i8* %14)
  store i32 0, i32* %9, align 4
  br label %16

16:                                               ; preds = %41, %13
  %17 = load i32, i32* %9, align 4
  %18 = load i32, i32* %8, align 4
  %19 = icmp slt i32 %17, %18
  br i1 %19, label %20, label %44

20:                                               ; preds = %16
  %21 = load i32, i32* %9, align 4
  %22 = load %struct.obj_order*, %struct.obj_order** %7, align 8
  %23 = load i32, i32* %9, align 4
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds %struct.obj_order, %struct.obj_order* %22, i64 %24
  %26 = getelementptr inbounds %struct.obj_order, %struct.obj_order* %25, i32 0, i32 0
  store i32 %21, i32* %26, align 4
  %27 = load i32 (i32)*, i32 (i32)** %6, align 8
  %28 = load %struct.obj_order*, %struct.obj_order** %7, align 8
  %29 = load i32, i32* %9, align 4
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds %struct.obj_order, %struct.obj_order* %28, i64 %30
  %32 = getelementptr inbounds %struct.obj_order, %struct.obj_order* %31, i32 0, i32 1
  %33 = load i32, i32* %32, align 4
  %34 = call i32 %27(i32 %33)
  %35 = call i32 @match_order(i32 %34)
  %36 = load %struct.obj_order*, %struct.obj_order** %7, align 8
  %37 = load i32, i32* %9, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds %struct.obj_order, %struct.obj_order* %36, i64 %38
  %40 = getelementptr inbounds %struct.obj_order, %struct.obj_order* %39, i32 0, i32 2
  store i32 %35, i32* %40, align 4
  br label %41

41:                                               ; preds = %20
  %42 = load i32, i32* %9, align 4
  %43 = add nsw i32 %42, 1
  store i32 %43, i32* %9, align 4
  br label %16

44:                                               ; preds = %16
  %45 = load %struct.obj_order*, %struct.obj_order** %7, align 8
  %46 = load i32, i32* %8, align 4
  %47 = load i32, i32* @compare_objs_order, align 4
  %48 = call i32 @QSORT(%struct.obj_order* %45, i32 %46, i32 %47)
  br label %49

49:                                               ; preds = %44, %12
  ret void
}

declare dso_local i32 @prepare_order(i8*) #1

declare dso_local i32 @match_order(i32) #1

declare dso_local i32 @QSORT(%struct.obj_order*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
